--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="/favicon.svg" type="image/svg+xml">
-  <title>Tpm Kintzel</title>
+  <title>Tom Kintzel</title>
   <meta name="description" content="Portfolio von Tom Kintzel, Web Entwickler aus Deutschland">
 </head>
 <body class="font-sans dark:text-white dark:bg-hex-121212">
