feat: add about text

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Tom Kintzel</title>
   <meta name="description" content="Portfolio von Tom Kintzel, Web Entwickler aus Deutschland">
 </head>
-<body class="font-sans dark:text-white dark:bg-hex-121212">
+<body class="font-sans text-gray-700 dark:text-gray-200 dark:bg-hex-121212">
   <div id="app"></div>
   <noscript>
     <div>Please enable JavaScript to use this application.</div>
